WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216363
REGRESSION(
r258464
): SVG use element doesn't render if it references a subsequent element after a style resolution
https://bugs.webkit.org/show_bug.cgi?id=216363
Summary
REGRESSION(r258464): SVG use element doesn't render if it references a subseq...
Leon
Reported
2020-09-10 07:33:25 PDT
Created
attachment 408437
[details]
Reproducible example In SVG, when the <def> is below the <use> the rendering is intermittent. This affects Safari 13 but not Safari 12. Please find attached a reproducible example and a screen recording showing the issue.
Attachments
Reproducible example
(197.89 KB, image/svg+xml)
2020-09-10 07:33 PDT
,
Leon
no flags
Details
Screen recording
(5.50 MB, video/quicktime)
2020-09-10 07:34 PDT
,
Leon
no flags
Details
Modified example
(198.07 KB, image/svg+xml)
2023-05-13 11:57 PDT
,
Ryosuke Niwa
no flags
Details
Reduction
(490 bytes, image/svg+xml)
2023-05-13 12:51 PDT
,
Ryosuke Niwa
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Leon
Comment 1
2020-09-10 07:34:34 PDT
Created
attachment 408439
[details]
Screen recording
Radar WebKit Bug Importer
Comment 2
2020-09-10 09:22:37 PDT
<
rdar://problem/68646948
>
Ahmad Saleem
Comment 3
2022-08-12 00:17:28 PDT
I am able to reproduce this bug in Safari Technical Preview 151 and Safari 15.6 on macOS 12.5 using attached Reproducible example, it shows sometime partial text from bottom up and then on refresh show some more and some time does not show at all and on refresh, it will show partial half in one go. In case of other browsers (Firefox Nightly 105 and Chrome Canary 106), this example show all the text in one go in arc shape and does not have same partial text rendering issue as Safari. Just wanted to share update. Thanks!
Ryosuke Niwa
Comment 4
2023-05-13 11:57:47 PDT
Created
attachment 466344
[details]
Modified example
Ryosuke Niwa
Comment 5
2023-05-13 12:51:26 PDT
Created
attachment 466346
[details]
Reduction
Ryosuke Niwa
Comment 6
2023-05-13 13:34:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13857
EWS
Comment 7
2023-05-15 16:03:28 PDT
Committed
264085@main
(a6a7aa5aca7b): <
https://commits.webkit.org/264085@main
> Reviewed commits have been landed. Closing PR #13857 and removing active labels.
Said Abou-Hallawa
Comment 8
2023-05-30 11:10:33 PDT
***
Bug 219531
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug